# kafka-eye

./: Cargo.toml  README.md  config.yaml  docker-compose.yml
src/: app.rs  config.rs  event.rs  main.rs  tui.rs
src/app/: commands.rs  events.rs  mod.rs  state.rs
src/config/: mod.rs
src/kafka/: admin.rs  client.rs  consumer.rs  mod.rs  producer.rs
src/ui/: consumer_groups.rs  dashboard.rs  dialogs.rs  help.rs  messages.rs  mod.rs  sidebar.rs  topics.rs
src/ui/components/: mod.rs
src/ui/screens/: cluster_management.rs  consumer_groups.rs  dashboard.rs  messages.rs  mod.rs  monitoring.rs  settings.rs  topics.rs
src/utils/: error.rs  mod.rs
