[package]
name = "kafka-eye"
version = "0.1.0"
edition = "2021"
description = "A TUI terminal Kafka client for DevOps engineers and developers"
authors = ["baiyulong"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.37", features = ["cmake-build"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
regex = "1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
unicode-width = "0.2"
